# bevy_game

./: Cargo.toml  README.md
assets/: Tank4.glb  Tank4_animated.glb
src/: main.rs
