[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6" 
bevy_mod_picking = "0.5.4"
rand = "0.8.4"

# geht nicht? 
# bevy = { version = "0.6.0", features = ["dynamic"] }
